--- a/app/src/main/res/layout/activity_test_receiver.xml
+++ b/app/src/main/res/layout/activity_test_receiver.xml
@@ -94,7 +94,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8sp"
-                            android:text="@string/lb_battery"
+                            android:text="@string/lb_battery_percent"
                             android:textColor="@color/limed_spruce" />
 
                         <TextView
