--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="body_large">18sp</dimen>
     <dimen name="body_regular">16sp</dimen>
     <dimen name="body_small">12sp</dimen>
+    <dimen name="body_x_small">10sp</dimen>
     <dimen name="button">16sp</dimen>
     <dimen name="text_button">16sp</dimen>
     <dimen name="paragraph">16sp</dimen>
@@ -22,5 +23,8 @@
     <dimen name="receiver_image">200sp</dimen>
     <dimen name="receiver_logo">256sp</dimen>
     <dimen name="disconnect_message">312sp</dimen>
-    <dimen name="border_radius">50sp</dimen>
+    <dimen name="border_radius">4sp</dimen>
+    <dimen name="border_radius_small">8sp</dimen>
+    <dimen name="receiver_status">64sp</dimen>
+    <dimen name="receiver_image_status">40sp</dimen>
 </resources>
