--- a/app/src/main/res/drawable/button_number.xml
+++ b/app/src/main/res/drawable/button_number.xml
@@ -3,5 +3,5 @@
     <stroke
         android:width="1sp"
         android:color="@color/ghost" />
-    <corners android:radius="@dimen/border_radius"/>
+    <corners android:radius="@dimen/border_radius_numbers"/>
 </shape>
