--- a/app/src/main/res/layout/frequencies_overview.xml
+++ b/app/src/main/res/layout/frequencies_overview.xml
@@ -45,10 +45,7 @@
         android:id="@+id/frequencies_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="16sp"
-        android:dividerHeight="16sp"
-        android:divider="@color/transparent"/>
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/add_frequency_button"
