--- a/app/src/main/res/layout/aerial_scanning.xml
+++ b/app/src/main/res/layout/aerial_scanning.xml
@@ -8,43 +8,8 @@
     android:layout_weight="1"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="16sp"
-        android:layout_marginHorizontal="32sp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/gps_aerial_imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_gps_off"/>
-
-        <TextView
-            android:id="@+id/gps_state_aerial_textView"
-            style="@style/body_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8sp"
-            android:text="@string/lb_off_gps"
-            android:textColor="@color/ebony_clay"/>
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/record_data_aerial_button"
-            style="@style/button_primary_small"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_small_height"
-            android:paddingHorizontal="10sp"
-            android:text="@string/lb_record_data" />
-
-    </LinearLayout>
+    <include
+        layout="@layout/gps_record_options"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -202,64 +167,11 @@
             android:background="@color/light_gray"
             tools:ignore="SmallSp" />
 
-        <LinearLayout
-            android:id="@+id/audio_aerial_linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone">
+        <include
+            layout="@layout/audio_option"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:padding="16sp"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        style="@style/body_small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8sp"
-                        android:text="@string/lb_id_audio"
-                        android:textColor="@color/limed_spruce" />
-
-                    <TextView
-                        android:id="@+id/id_audio_aerial_textView"
-                        style="@style/body_large"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_all"
-                        android:textColor="@color/ebony_clay"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/edit_audio_aerial_textView"
-                    style="@style/button_small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8sp"
-                    android:gravity="end"
-                    android:text="@string/lb_edit_audio_options"
-                    android:textColor="@color/limed_spruce" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/light_gray"
-                tools:ignore="SmallSp" />
-
-        </LinearLayout>
+        <include
+            layout="@layout/coordinates"/>
 
         <include
             layout="@layout/scan_details"/>
