--- a/app/src/main/res/layout/manual_scanning.xml
+++ b/app/src/main/res/layout/manual_scanning.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/manual_scan_linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,43 +9,8 @@
     android:layout_weight="1"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="16sp"
-        android:layout_marginHorizontal="32sp"
-        android:gravity="bottom"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/gps_manual_imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_gps_off"/>
-
-        <TextView
-            android:id="@+id/gps_state_manual_textView"
-            style="@style/body_regular"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="8sp"
-            android:gravity="bottom"
-            android:textColor="@color/ebony_clay"/>
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/record_data_manual_button"
-            style="@style/button_primary_small"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_small_height"
-            android:paddingHorizontal="10sp"
-            android:text="@string/lb_record_data" />
-
-    </LinearLayout>
+    <include
+        layout="@layout/gps_record_options"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -120,62 +86,44 @@
             tools:ignore="SmallSp" />
 
         <LinearLayout
-            android:id="@+id/audio_manual_linearLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="16sp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                style="@style/body_small"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:padding="16sp"
-                android:orientation="horizontal">
+                android:text="@string/lb_gps_data"
+                android:textColor="@color/limed_spruce" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
-                    <TextView
-                        style="@style/body_small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8sp"
-                        android:text="@string/lb_id_audio"
-                        android:textColor="@color/limed_spruce" />
-
-                    <TextView
-                        android:id="@+id/id_audio_manual_textView"
-                        style="@style/body_large"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_all"
-                        android:textColor="@color/ebony_clay"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/edit_audio_manual_textView"
-                    style="@style/button_small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:text="@string/lb_edit_audio_options"
-                    android:textColor="@color/limed_spruce" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/light_gray"
-                tools:ignore="SmallSp" />
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/gps_scanning_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumb="@drawable/thumb_switch"
+                app:track="@drawable/track_switch" />
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/light_gray"
+            tools:ignore="SmallSp" />
+
+        <include
+            layout="@layout/audio_option"/>
+
+        <include
+            layout="@layout/coordinates"/>
 
         <include
             layout="@layout/scan_details"/>
